--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test --headed"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -12,5 +14,8 @@
     "@types/node": "^20.8.2",
     "allure-js-commons": "^2.9.1",
     "allure-playwright": "^2.9.2"
+  },
+  "dependencies": {
+    "allure-commandline": "^2.24.1"
   }
 }
