--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Run Playwright tests
       run: npx playwright test
     - name: Generate allure report from results
-      run: allure generate allure-results -o allure-report --clean
+      run: npx allure generate allure-results -o allure-report --clean
     - uses: actions/upload-artifact@v3
       if: always()
       with:
