--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 18
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
@@ -20,6 +20,7 @@ jobs:
     - name: Run Playwright tests
       run: npx playwright test
     - name: Generate allure report from results
+      if: always()
       run: npx allure generate allure-results -o allure-report --clean
     - uses: actions/upload-artifact@v3
       if: always()
