--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
       run: npx playwright test
     - name: Generate allure report from results
       if: always()
-      run: npx allure generate allure-results -o allure-report --clean
+      run: npx allure generate allure-results -o allure-report
     - uses: actions/upload-artifact@v3
       if: always()
       with:
