--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,22 +9,50 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
-        node-version: 18
+        node-version: '18.x'
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
+    - name: Install Playwright
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npm run test
-    - name: Generate allure report from results
+      run: npx playwright test
+    - name: Generate Allure Report
       if: always()
-      run: npm run allure-generate
-    - uses: actions/upload-artifact@v3
+      run: npm run allure-report
+    - uses: actions/upload-artifact@v2
       if: always()
       with:
-        name: allure-report
+        name: playwright-test-results
+        path: test-results/
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: allure-test-results
         path: allure-report/
-        retention-days: 30
+
+    - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+
+    - name: Allure Report action from marketplace
+      uses: simple-elf/allure-report-action@master
+      if: always()
+      with:
+        allure_results: allure-results
+        allure_history: allure-history
+        keep_reports: 20
+
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-history
